# app-template

./: CMakeLists.txt
.github/workflows/: lint.yml
include/tutorial/: config.hpp
src/: CMakeLists.txt  fastq_conversion.cpp
src/tutorial/: CMakeLists.txt  build.cpp  count.cpp  main.cpp  search.cpp
